11-apply-service-account-cluster-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: position-simulator
spec:
  selector:
    matchLabels:
      app: position-simulator
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: position-simulator
    spec:
      containers:
      - name: position-simulator
        image: nathluu/istio-fleetman-position-simulator:6
        command: ["java","-Xmx50m","-jar","webapp.jar"]
        imagePullPolicy: Always
  serviceAccountName: position-simulator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: position-tracker
spec:
  selector:
    matchLabels:
      app: position-tracker
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: position-tracker
    spec:
      containers:
      - name: position-tracker
        image: nathluu/istio-fleetman-position-tracker:6
        command: ["java","-Xmx50m","-jar","webapp.jar"]
        imagePullPolicy: Always
  serviceAccountName: position-tracker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehicle-telemetry
spec:
  selector:
    matchLabels:
      app: vehicle-telemetry
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: vehicle-telemetry
    spec:
      containers:
      - name: vehicle-telemtry
        image: nathluu/istio-fleetman-vehicle-telemetry:6
        imagePullPolicy: Always
  serviceAccountName: vehicle-telemetry
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staff-service
spec:
  selector:
    matchLabels:
      app: staff-service
  replicas: 1
  template: # template for the pods
    metadata:
      labels:
        app: staff-service
    spec:
      containers:
      - name: staff-service
        image: nathluu/istio-fleetman-staff-service:6
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
  serviceAccountName: staff-service
