12-authorization-policy-1.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "to-api-gateway"
  namespace: default
spec:
  selector:
    matchLabels:
      app: api-gateway
  action: ALLOW
  rules:
  - from:
      - source:
          principals: ["cluster.local/ns/default/sa/webapp"]
    to:
    - operation:
        methods: ["GET"]
---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "to-position-tracker"
  namespace: default
spec:
  selector:
    matchLabels:
      app: position-tracker
  action: ALLOW
  rules:
  - from:
      - source:
          principals: ["cluster.local/ns/default/sa/api-gateway", "cluster.local/ns/default/sa/position-simulator"]
    to:
    - operation:
        methods: ["GET"]
