12-authorization-policy.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "webapp-viewer"
  namespace: default
spec:
  selector:
    matchLabels:
      app: webapp
  rules:
  - to:
    - operation:
        methods: ["GET"]
---
